2007-08-16 Alasdair Allan <aa@astro.ex.ac.uk>

	* ogle_fetch_v2.pl: Updated ogle_fetch for new V2 of PLOP
	
	* startup/cron/ogle_fetch_*: Updated to run ogle_fetch_v2.pl
	
2007-07-10 Alasdair Allan <aa@astro.ex.ac.uk>

	* ogle_DB_client.pl: Added event client to slurp live OGLE feed
          into the STAP service database.

2007-05-21 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/jach_agent.pl: Added more debug and updaated project ID

	* startup/test_templates.pl: Updated project ID

2007-05-04 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/robonet-1.0/cgi-bin/performance.cgi: Made pretty.

2007-05-03 Eric Saunders <saunders@astro.ex.ac.uk>

	* etc/adaptive_vs_scheduler.csh: Commit of startup script

2007-05-02 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/scoring.cgi: New network status web page.

        * www/robonet-1.0/cgi-bin/submit.cgi: Added project tag.

2007-04-28 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/adaptive_vs_scheduler.pl: Algorithm improvements for a more
	  aggressive window. Numerous big fixes. Options modified for
	  live operation.

	* lib/ADP/Util.pm: Added support for timestamps with UTC offset
	  (e.g. +1000) - correctly interprets as DateTimes.

	* t/01_util_adp.t - unit tests for UTC offset code.

2007-04-26 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/status.cgi: FIxed another status corner case.
        
        * www/robonet-1.0/cgi-bin/performance.cgi: Completion statistics script
          which calculates how well we're doing.

2007-04-26 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/adaptive_vs_scheduler.pl, bin/virtual_telescope.pl, 
	  examples/adp_algorithm2.pl, examples/datetime_sandbox.pl, 
	  examples/telescope_sandbox.pl, eSTAR/VT/Handler.pm: Fixed hardcoded
	  user directories. 

2007-04-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * eSTAR/UA/Handler: Fixed some bugs on user agent mail returns.

2007-04-24 Alasdair Allan <aa@astro.ex.ac.uk>
